tests/file_test/testdata/if_then_missing_braces.llang
if 3 > 4 return 7;
